ui activity lihat buku

--- a/app/src/main/res/layout/activity_lihat_buku.xml
+++ b/app/src/main/res/layout/activity_lihat_buku.xml
@@ -11,8 +11,8 @@
 
     <ImageButton
         android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_marginLeft="20dp"
         android:src="@drawable/ic_back"
         android:background="@android:color/transparent"
@@ -26,17 +26,19 @@
         android:textSize="25sp"
         android:layout_gravity="center_horizontal"
         android:textColor="@android:color/black"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp">
-    </androidx.recyclerview.widget.RecyclerView>
 
+    </androidx.recyclerview.widget.RecyclerView>
 
 
 </LinearLayout>
