--- a/app/src/main/res/layout/activity_cari_buku.xml
+++ b/app/src/main/res/layout/activity_cari_buku.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CariBukuActivity"
-    android:background="@drawable/bg2">
-</ScrollView>
+    tools:context=".LihatBukuActivity"
+    android:orientation="vertical"
+    android:padding="8dp"
+    android:background="@drawable/bg">
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginLeft="20dp"
+        android:src="@drawable/ic_back"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:foreground="?android:attr/selectableItemBackground"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cari Buku"
+        android:textSize="25sp"
+        android:layout_gravity="center_horizontal"
+        android:textColor="@android:color/black"
+        android:layout_marginTop="10dp"
+        android:textStyle="bold"
+        android:fontFamily="sans-serif-condensed"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="30dp"
+        android:background="@color/white"
+        android:gravity="center">
+
+        <EditText
+            android:id="@+id/editMobileNo"
+            android:layout_width="wrap_content"
+            android:layout_height="33dp"
+            android:layout_margin="5dp"
+            android:background="@drawable/searchbox"
+            android:drawableLeft="@drawable/ic_cari_buku"
+            android:ems="10"
+            android:gravity="center"
+            android:hint="Ketik nama buku... ">
+
+        </EditText>
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginRight="20dp">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
+
+</LinearLayout>
