--- a/app/src/main/res/layout/item_buku.xml
+++ b/app/src/main/res/layout/item_buku.xml
@@ -27,7 +27,7 @@
             android:layout_gravity="center_vertical">
 
             <TextView
-                android:id="@+id/tv_buku"
+                android:id="@+id/tv_judul"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nama Buku"
@@ -35,7 +35,7 @@
                 android:textColor="@android:color/black"/>
 
             <TextView
-                android:id="@+id/tv_penulis"
+                android:id="@+id/tv_isbn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Nama Penulis"
