--- a/app/src/main/res/layout/activity_lihat_buku.xml
+++ b/app/src/main/res/layout/activity_lihat_buku.xml
@@ -31,7 +31,7 @@
         android:fontFamily="sans-serif-condensed"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
+        android:id="@+id/recyclerview2222"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="30dp"
