--- a/app/src/main/res/layout/item_buku.xml
+++ b/app/src/main/res/layout/item_buku.xml
@@ -12,7 +12,7 @@
     android:foreground="?android:attr/selectableItemBackground">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <ImageView
@@ -20,11 +20,13 @@
             android:layout_height="80dp"
             android:src="@drawable/ic_buku"
             android:layout_gravity="center_vertical"/>
+
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:layout_gravity="center_vertical">
+            android:layout_gravity="center_vertical"
+            android:layout_marginRight="10dp">
 
             <TextView
                 android:id="@+id/tv_judul"
@@ -38,10 +40,11 @@
                 android:id="@+id/tv_isbn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Nama Penulis"
+                android:text="Nomor ISBN"
                 android:layout_marginTop="5dp"/>
-        </LinearLayout>
-    </LinearLayout>
 
+        </LinearLayout>
+
+    </LinearLayout>
 
 </LinearLayout>
