--- a/app/src/main/res/layout/activity_detail_buku.xml
+++ b/app/src/main/res/layout/activity_detail_buku.xml
@@ -167,7 +167,7 @@
                 </TableRow>
             </TableLayout>
 
-        </LinearLayout>
+        </TableRow>
 
     </RelativeLayout>
 
