Cari buku sudah bisa

--- a/app/src/main/res/layout/activity_detail_buku.xml
+++ b/app/src/main/res/layout/activity_detail_buku.xml
@@ -166,7 +166,7 @@
                 </TableRow>
             </TableLayout>
 
-        </LinearLayout>
+        </TableRow>
 
     </RelativeLayout>
 
