--- a/app/src/main/res/layout/activity_lihat_buku.xml
+++ b/app/src/main/res/layout/activity_lihat_buku.xml
@@ -21,7 +21,7 @@
         android:fontFamily="sans-serif-condensed"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview2"
+        android:id="@+id/recyclerView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
