--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -164,7 +164,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="Logout"
+                            android:text="Login - Logout"
                             android:textColor="@android:color/black"
                             android:textSize="12sp" />
 
