--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -61,6 +61,7 @@
                     android:id="@+id/username"
                     android:layout_width="300dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/searchbox"/>
             </LinearLayout>
 
@@ -87,6 +88,7 @@
                     android:id="@+id/password"
                     android:layout_width="300dp"
                     android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
                     android:background="@drawable/searchbox"
                     android:inputType="textPassword" />
             </LinearLayout>
